--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Kurs Reacta Tydzień 1</title>
+  <title>Course React - Week 5</title>
   
 </head>
 
 <body>
-  <h1>Kurs Reacta - Tydzień 3</h1>
+  <h1>Week 5 </h1>
   <hr>
 
   <div id="root"></div>
